css to accomdate different word sizes css to accomdate different window sizes css for scrolling if lots of guesses

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,20 @@
 package-lock.json
 test.html
 setVersion.mjs
+test/.gitignore
+test/index.html
+test/package.json
+test/README.md
+test/svelte.config.js
+test/tsconfig.json
+test/tsconfig.node.json
+test/vite.config.ts
+test/.vscode/extensions.json
+test/public/vite.svg
+test/src/app.css
+test/src/App.svelte
+test/src/main.ts
+test/src/vite-env.d.ts
+test/src/assets/svelte.svg
+test/src/lib/Counter.svelte
+test/.vscode/extensions.json
