--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
-	"short_name": "Wordle+",
-	"name": "Wordle+",
-	"start_url": "https://mikhad.github.io/wordle/",
+	"short_name": "Roguedle",
+	"name": "Roguedle",
+	"start_url": "roguedle.com",
 	"background_color": "#6aaa64",
 	"theme_color": "#6aaa64",
-	"description": "A daily, hourly, INFINITE word game",
+	"description": "A wordle roguelike",
 	"display": "standalone",
 	"icons": [
 		{
